move to correct folder

--- a/3D_NN_models/prepareFileList.ipynb
+++ b/3D_NN_models/prepareFileList.ipynb
@@ -280,7 +280,7 @@
     "    img_list.sort()\n",
     "    test_df = pd.DataFrame(columns=['FileName'])\n",
     "    for frame in img_list:\n",
-    "        frame_list = os.path.join(clusterpath,frame)\n",
+    "        frame_list = os.path.join(clusterpathTest,frame)\n",
     "        test_df = test_df.append({'FileName': frame_list},ignore_index=True)\n",
     "    file_name='{}.csv'.format(data_dir)\n",
     "    test_df.to_csv('/Users/jieunyoo/april12_3dCNN/data_files/test/{}'.format(file_name),index=False)"
@@ -472,95 +472,95 @@
      "output_type": "stream",
      "text": [
       "                                            FileName    label\n",
-      "0  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.07038\n",
-      "1  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.07038\n",
-      "2  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.07038\n",
-      "3  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.07038\n",
-      "4  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.07038\n",
-      "5  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.07038\n",
-      "6  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.07038\n",
-      "7  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.07038\n",
+      "0  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.07038\n",
+      "1  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.07038\n",
+      "2  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.07038\n",
+      "3  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.07038\n",
+      "4  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.07038\n",
+      "5  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.07038\n",
+      "6  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.07038\n",
+      "7  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.07038\n",
       "                                            FileName     label\n",
-      "0  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.041277\n",
-      "1  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.041277\n",
-      "2  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.041277\n",
-      "3  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.041277\n",
-      "4  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.041277\n",
-      "5  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.041277\n",
-      "6  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.041277\n",
-      "7  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.041277\n",
+      "0  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.041277\n",
+      "1  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.041277\n",
+      "2  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.041277\n",
+      "3  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.041277\n",
+      "4  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.041277\n",
+      "5  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.041277\n",
+      "6  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.041277\n",
+      "7  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.041277\n",
       "                                            FileName     label\n",
-      "0  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.056348\n",
-      "1  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.056348\n",
-      "2  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.056348\n",
-      "3  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.056348\n",
-      "4  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.056348\n",
-      "5  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.056348\n",
-      "6  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.056348\n",
-      "7  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.056348\n",
+      "0  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.056348\n",
+      "1  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.056348\n",
+      "2  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.056348\n",
+      "3  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.056348\n",
+      "4  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.056348\n",
+      "5  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.056348\n",
+      "6  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.056348\n",
+      "7  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.056348\n",
       "                                            FileName     label\n",
-      "0  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.236056\n",
-      "1  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.236056\n",
-      "2  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.236056\n",
-      "3  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.236056\n",
-      "4  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.236056\n",
-      "5  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.236056\n",
-      "6  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.236056\n",
-      "7  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.236056\n",
+      "0  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.236056\n",
+      "1  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.236056\n",
+      "2  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.236056\n",
+      "3  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.236056\n",
+      "4  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.236056\n",
+      "5  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.236056\n",
+      "6  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.236056\n",
+      "7  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.236056\n",
       "                                            FileName     label\n",
-      "0  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.155919\n",
-      "1  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.155919\n",
-      "2  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.155919\n",
-      "3  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.155919\n",
-      "4  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.155919\n",
-      "5  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.155919\n",
-      "6  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.155919\n",
-      "7  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.155919\n",
+      "0  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.155919\n",
+      "1  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.155919\n",
+      "2  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.155919\n",
+      "3  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.155919\n",
+      "4  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.155919\n",
+      "5  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.155919\n",
+      "6  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.155919\n",
+      "7  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.155919\n",
       "                                            FileName     label\n",
-      "0  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.189536\n",
-      "1  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.189536\n",
-      "2  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.189536\n",
-      "3  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.189536\n",
-      "4  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.189536\n",
-      "5  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.189536\n",
-      "6  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.189536\n",
-      "7  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.189536\n",
+      "0  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.189536\n",
+      "1  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.189536\n",
+      "2  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.189536\n",
+      "3  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.189536\n",
+      "4  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.189536\n",
+      "5  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.189536\n",
+      "6  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.189536\n",
+      "7  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.189536\n",
       "                                            FileName     label\n",
-      "0  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.217438\n",
-      "1  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.217438\n",
-      "2  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.217438\n",
-      "3  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.217438\n",
-      "4  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.217438\n",
-      "5  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.217438\n",
-      "6  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.217438\n",
-      "7  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.217438\n",
+      "0  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.217438\n",
+      "1  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.217438\n",
+      "2  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.217438\n",
+      "3  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.217438\n",
+      "4  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.217438\n",
+      "5  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.217438\n",
+      "6  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.217438\n",
+      "7  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.217438\n",
       "                                            FileName     label\n",
-      "0  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.113703\n",
-      "1  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.113703\n",
-      "2  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.113703\n",
-      "3  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.113703\n",
-      "4  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.113703\n",
-      "5  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.113703\n",
-      "6  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.113703\n",
-      "7  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.113703\n",
+      "0  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.113703\n",
+      "1  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.113703\n",
+      "2  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.113703\n",
+      "3  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.113703\n",
+      "4  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.113703\n",
+      "5  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.113703\n",
+      "6  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.113703\n",
+      "7  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.113703\n",
       "                                            FileName     label\n",
-      "0  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.211178\n",
-      "1  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.211178\n",
-      "2  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.211178\n",
-      "3  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.211178\n",
-      "4  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.211178\n",
-      "5  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.211178\n",
-      "6  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.211178\n",
-      "7  /Users/jieunyoo/april12_3dCNN/figures/cluster2...  0.211178\n",
+      "0  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.211178\n",
+      "1  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.211178\n",
+      "2  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.211178\n",
+      "3  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.211178\n",
+      "4  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.211178\n",
+      "5  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.211178\n",
+      "6  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.211178\n",
+      "7  /Users/jieunyoo/april12_3dCNN/figures-test/clu...  0.211178\n",
       "                                            FileName     label\n",
-      "0  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.234857\n",
-      "1  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.234857\n",
-      "2  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.234857\n",
-      "3  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.234857\n",
-      "4  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.234857\n",
-      "5  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.234857\n",
-      "6  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.234857\n",
-      "7  /Users/jieunyoo/april12_3dCNN/figures/cluster2... -0.234857\n"
+      "0  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.234857\n",
+      "1  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.234857\n",
+      "2  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.234857\n",
+      "3  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.234857\n",
+      "4  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.234857\n",
+      "5  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.234857\n",
+      "6  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.234857\n",
+      "7  /Users/jieunyoo/april12_3dCNN/figures-test/clu... -0.234857\n"
      ]
     }
    ],
