comment out validation set

--- a/3D_NN_models/CNN-LSTM-april18.ipynb
+++ b/3D_NN_models/CNN-LSTM-april18.ipynb
@@ -519,9 +519,9 @@
     }
    ],
    "source": [
-    "NUMBER_TEST = len(test_data)\n",
+    "#NUMBER_TEST = len(test_data)\n",
     "\n",
-    "num_val_steps = int(NUMBER_TEST/BATCH_SIZE)\n",
+    "#num_val_steps = int(NUMBER_TEST/BATCH_SIZE)\n",
     "\n",
     "hist = model.fit(train_generator,\n",
     "                 steps_per_epoch=(len(train_data)/BATCH_SIZE),\n",
