ignore deprecation warnings

--- a/3D_NN_models/prepareFileList.ipynb
+++ b/3D_NN_models/prepareFileList.ipynb
@@ -11,6 +11,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "path = os.getcwd()\n",
     "pathTrain = os.path.join(path,'figures')\n",
     "pathTest = os.path.join(path,'figures-test')"
