--- a/3D_NN_cotBeta_models/CNN-LSTM-april18.ipynb
+++ b/3D_NN_cotBeta_models/CNN-LSTM-april18.ipynb
@@ -525,7 +525,7 @@
     "\n",
     "hist = model.fit(train_generator,\n",
     "                 steps_per_epoch=(len(train_data)/BATCH_SIZE),\n",
-    "                 epochs=EPOCHS,\n",
+    "                 epochs=EPOCHS, validation_steps=(len(test_data)/BATCH_SIZE),\n",
     "                 callbacks=[cp_callback, csv_logger, earlyStop_callback])"
    ]
   },
