--- a/multiclassifier/positiveSide.ipynb
+++ b/multiclassifier/positiveSide.ipynb
@@ -78,7 +78,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>-0.199521</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -108,7 +108,7 @@
        "    <tr>\n",
        "      <th>198192</th>\n",
        "      <td>0.198409</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -138,12 +138,12 @@
        "              pt  predict  true\n",
        "0       0.178055        2     2\n",
        "1       0.499588        0     0\n",
-       "2      -0.199521        0     1\n",
+       "2      -0.199521        1     1\n",
        "3      -2.179800        0     0\n",
        "4      -0.196326        1     1\n",
        "...          ...      ...   ...\n",
        "198191 -0.196402        1     1\n",
-       "198192  0.198409        0     2\n",
+       "198192  0.198409        2     2\n",
        "198193  0.198085        2     2\n",
        "198194  0.168638        0     2\n",
        "198195  0.171551        2     2\n",
@@ -841,16 +841,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.06306306, 0.29442939, 0.52611562, 0.67329474, 0.76442308,\n",
-       "        0.80913289, 0.83765244, 0.85224342, 0.86044125, 0.87030632,\n",
-       "        0.88119738, 0.8747507 , 0.87206932, 0.8856305 , 0.89381207,\n",
-       "        0.88586479, 0.8973545 , 0.89566396, 0.88776978, 0.87564767,\n",
-       "        0.88453159, 0.87948718, 0.88323353, 0.9141791 , 0.85770751,\n",
-       "        0.93721973, 0.90697674, 0.92567568, 0.92805755, 0.87903226,\n",
-       "        0.91208791, 0.90909091, 0.84285714, 0.86567164, 0.84313725,\n",
-       "        0.95454545, 0.91891892, 0.85      , 0.77419355, 0.875     ,\n",
-       "        0.92592593, 0.85185185, 0.88235294, 0.81818182, 0.9       ,\n",
-       "        0.84615385, 0.94117647, 0.90909091, 1.        , 0.84615385]])"
+       "array([[0.01801802, 0.20401311, 0.44066937, 0.6340297 , 0.7555668 ,\n",
+       "        0.8134941 , 0.83917683, 0.86281588, 0.86916367, 0.87351779,\n",
+       "        0.88618647, 0.89190267, 0.89092762, 0.90029326, 0.90068755,\n",
+       "        0.90254609, 0.8984127 , 0.91192412, 0.89640288, 0.92055268,\n",
+       "        0.91067538, 0.92051282, 0.91616766, 0.89179104, 0.90513834,\n",
+       "        0.95964126, 0.93023256, 0.93918919, 0.94244604, 0.9516129 ,\n",
+       "        0.94505495, 0.89772727, 0.91428571, 0.95522388, 0.8627451 ,\n",
+       "        0.93181818, 0.89189189, 0.9       , 0.93548387, 0.96875   ,\n",
+       "        0.96296296, 0.88888889, 0.82352941, 0.81818182, 0.9       ,\n",
+       "        1.        , 0.88235294, 0.90909091, 1.        , 0.92307692]])"
       ]
      },
      "execution_count": 55,
@@ -898,16 +898,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.0238356 , 0.05150259, 0.01154974, 0.01301797, 0.0139078 ,\n",
-       "        0.01440751, 0.01458829, 0.01482443, 0.01485729, 0.01466276,\n",
-       "        0.01657628, 0.01867949, 0.02108269, 0.02279104, 0.02613083,\n",
-       "        0.02788829, 0.03081528, 0.03483729, 0.03574027, 0.03888888,\n",
-       "        0.04389857, 0.04748784, 0.05142384, 0.05840476, 0.05822498,\n",
-       "        0.06482884, 0.07261626, 0.07908581, 0.08171091, 0.08419602,\n",
-       "        0.10011465, 0.10163945, 0.10973065, 0.11366826, 0.12857723,\n",
-       "        0.14728956, 0.15759329, 0.1457738 , 0.1580316 , 0.16535946,\n",
-       "        0.18518519, 0.17762339, 0.22782255, 0.1928473 , 0.3       ,\n",
-       "        0.25512498, 0.23529412, 0.28747979, 0.23570226, 0.25512498]])"
+       "array([[0.01262536, 0.03824904, 0.00790537, 0.0076422 , 0.00683609,\n",
+       "        0.00623882, 0.00585563, 0.00552468, 0.00540125, 0.00522433,\n",
+       "        0.00560803, 0.00620139, 0.00703767, 0.00725591, 0.00826645,\n",
+       "        0.00878764, 0.00982747, 0.01043229, 0.01155934, 0.01123892,\n",
+       "        0.01331254, 0.01369718, 0.01516422, 0.01897561, 0.01842225,\n",
+       "        0.01317865, 0.01942486, 0.01964428, 0.01975415, 0.01927011,\n",
+       "        0.02388758, 0.03230062, 0.03345943, 0.02526611, 0.04818591,\n",
+       "        0.03799912, 0.05104866, 0.04743416, 0.04412365, 0.03075784,\n",
+       "        0.03634469, 0.06048123, 0.09245944, 0.08223037, 0.09486833,\n",
+       "        0.        , 0.07814249, 0.08667842, 0.        , 0.0739053 ]])"
       ]
      },
      "execution_count": 57,
@@ -917,7 +917,7 @@
    ],
    "source": [
     "first = y_values*(1-y_values)\n",
-    "second = y_values/x_values\n",
+    "second = first/x_values\n",
     "errors = np.sqrt(second)\n",
     "errors"
    ]
