--- a/hit-position/process-1Dy.ipynb
+++ b/hit-position/process-1Dy.ipynb
@@ -37,22 +37,22 @@
     "    if 'recon' in f:\n",
     "        continue\n",
     "        \n",
-    "    label = pd.read_csv(eosdir_pos+f,usecols=['x-midplane','cotAlpha'])\n",
+    "    label = pd.read_csv(eosdir_pos+f,usecols=['y-midplane','cotBeta'])\n",
     "                        \n",
-    "    xdf = pd.read_csv(eosdir_pos+'recon1Dx_'+f.split('_')[1])\n",
+    "    ydf = pd.read_csv(eosdir_pos+'recon1Dy_'+f.split('_')[1])\n",
     "    \n",
-    "    df = pd.concat([df,pd.concat([label,xdf],axis=1)])\n",
+    "    df = pd.concat([df,pd.concat([label,ydf],axis=1)])\n",
     "    \n",
     "print('Processing - charge')\n",
     "for f in os.listdir(eosdir_neg):\n",
     "    if 'recon' in f:\n",
     "        continue\n",
     "\n",
-    "    label = pd.read_csv(eosdir_neg+f,usecols=['x-midplane','cotAlpha'])\n",
+    "    label = pd.read_csv(eosdir_neg+f,usecols=['y-midplane','cotBeta'])\n",
     "                        \n",
-    "    xdf = pd.read_csv(eosdir_neg+'recon1Dx_'+f.split('_')[1])\n",
+    "    ydf = pd.read_csv(eosdir_neg+'recon1Dy_'+f.split('_')[1])\n",
     "    \n",
-    "    df = pd.concat([df,pd.concat([label,xdf],axis=1)])"
+    "    df = pd.concat([df,pd.concat([label,ydf],axis=1)])"
    ]
   },
   {
@@ -81,8 +81,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>cotAlpha</th>\n",
-       "      <th>x-midplane</th>\n",
+       "      <th>cotBeta</th>\n",
+       "      <th>y-midplane</th>\n",
        "      <th>0</th>\n",
        "      <th>1</th>\n",
        "      <th>2</th>\n",
@@ -91,37 +91,25 @@
        "      <th>5</th>\n",
        "      <th>6</th>\n",
        "      <th>7</th>\n",
-       "      <th>...</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
        "      <th>11</th>\n",
        "      <th>12</th>\n",
-       "      <th>13</th>\n",
-       "      <th>14</th>\n",
-       "      <th>15</th>\n",
-       "      <th>16</th>\n",
-       "      <th>17</th>\n",
-       "      <th>18</th>\n",
-       "      <th>19</th>\n",
-       "      <th>20</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>4.334190</td>\n",
-       "      <td>-28.748886</td>\n",
+       "      <td>0.021384</td>\n",
+       "      <td>4.750171</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1307.0</td>\n",
-       "      <td>10724.0</td>\n",
-       "      <td>2613.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3866.0</td>\n",
-       "      <td>3526.0</td>\n",
-       "      <td>4610.0</td>\n",
-       "      <td>635.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>13523.0</td>\n",
+       "      <td>11479.0</td>\n",
+       "      <td>12934.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -131,22 +119,16 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-0.602557</td>\n",
-       "      <td>39.535967</td>\n",
+       "      <td>-0.019167</td>\n",
+       "      <td>14.159270</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4843.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>2155.0</td>\n",
+       "      <td>2650.0</td>\n",
+       "      <td>1703.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -155,22 +137,16 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.386898</td>\n",
-       "      <td>65.387944</td>\n",
+       "      <td>-0.106004</td>\n",
+       "      <td>16.021390</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4699.0</td>\n",
-       "      <td>1192.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1351.0</td>\n",
+       "      <td>3466.0</td>\n",
+       "      <td>1074.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -179,21 +155,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-3.884130</td>\n",
-       "      <td>-62.093969</td>\n",
+       "      <td>-0.165913</td>\n",
+       "      <td>3.020286</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2070.0</td>\n",
-       "      <td>3638.0</td>\n",
-       "      <td>2615.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3666.0</td>\n",
-       "      <td>3053.0</td>\n",
-       "      <td>486.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>2151.0</td>\n",
+       "      <td>23684.0</td>\n",
+       "      <td>2953.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -203,21 +173,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.099405</td>\n",
-       "      <td>-51.763367</td>\n",
+       "      <td>0.059327</td>\n",
+       "      <td>0.116152</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>604.0</td>\n",
+       "      <td>2597.0</td>\n",
+       "      <td>2144.0</td>\n",
+       "      <td>2082.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -227,25 +191,22 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   cotAlpha  x-midplane    0    1    2    3    4       5        6       7  \\\n",
-       "0  4.334190  -28.748886  0.0  0.0  0.0  0.0  0.0  1307.0  10724.0  2613.0   \n",
-       "1 -0.602557   39.535967  0.0  0.0  0.0  0.0  0.0     0.0      0.0     0.0   \n",
-       "2  0.386898   65.387944  0.0  0.0  0.0  0.0  0.0     0.0      0.0     0.0   \n",
-       "3 -3.884130  -62.093969  0.0  0.0  0.0  0.0  0.0  2070.0   3638.0  2615.0   \n",
-       "4  0.099405  -51.763367  0.0  0.0  0.0  0.0  0.0     0.0      0.0     0.0   \n",
+       "    cotBeta  y-midplane    0    1    2      3        4        5        6  \\\n",
+       "0  0.021384    4.750171  0.0  0.0  0.0   31.0  13523.0  11479.0  12934.0   \n",
+       "1 -0.019167   14.159270  0.0  0.0  0.0    0.0     30.0   2155.0   2650.0   \n",
+       "2 -0.106004   16.021390  0.0  0.0  0.0    0.0      0.0   1351.0   3466.0   \n",
+       "3 -0.165913    3.020286  0.0  0.0  0.0    0.0   2151.0  23684.0   2953.0   \n",
+       "4  0.059327    0.116152  0.0  0.0  0.0  604.0   2597.0   2144.0   2082.0   \n",
        "\n",
-       "   ...      11      12      13     14   15   16   17   18   19   20  \n",
-       "0  ...  3866.0  3526.0  4610.0  635.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-       "1  ...  4843.0     0.0     0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-       "2  ...  4699.0  1192.0     0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-       "3  ...  3666.0  3053.0   486.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-       "4  ...     0.0     0.0     0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-       "\n",
-       "[5 rows x 23 columns]"
+       "        7    8    9   10   11   12  \n",
+       "0     0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "1  1703.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "2  1074.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "3     0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "4     0.0  0.0  0.0  0.0  0.0  0.0  "
       ]
      },
      "execution_count": 3,
@@ -283,8 +244,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>cotAlpha</th>\n",
-       "      <th>x-midplane</th>\n",
+       "      <th>cotBeta</th>\n",
+       "      <th>y-midplane</th>\n",
        "      <th>0</th>\n",
        "      <th>1</th>\n",
        "      <th>2</th>\n",
@@ -293,37 +254,25 @@
        "      <th>5</th>\n",
        "      <th>6</th>\n",
        "      <th>7</th>\n",
-       "      <th>...</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
        "      <th>11</th>\n",
        "      <th>12</th>\n",
-       "      <th>13</th>\n",
-       "      <th>14</th>\n",
-       "      <th>15</th>\n",
-       "      <th>16</th>\n",
-       "      <th>17</th>\n",
-       "      <th>18</th>\n",
-       "      <th>19</th>\n",
-       "      <th>20</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.360541</td>\n",
-       "      <td>64.129107</td>\n",
+       "      <td>-0.115094</td>\n",
+       "      <td>9.949084</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4688.0</td>\n",
-       "      <td>3583.0</td>\n",
-       "      <td>369.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>7990.0</td>\n",
+       "      <td>8163.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -333,44 +282,32 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5.117512</td>\n",
-       "      <td>70.606092</td>\n",
+       "      <td>0.000086</td>\n",
+       "      <td>5.112724</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>6670.0</td>\n",
+       "      <td>14134.0</td>\n",
+       "      <td>14591.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>693.0</td>\n",
-       "      <td>2950.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3194.0</td>\n",
-       "      <td>3523.0</td>\n",
-       "      <td>2668.0</td>\n",
-       "      <td>2051.0</td>\n",
-       "      <td>2737.0</td>\n",
-       "      <td>2953.0</td>\n",
-       "      <td>75.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1.242920</td>\n",
-       "      <td>-51.172048</td>\n",
+       "      <td>-0.150252</td>\n",
+       "      <td>-4.567938</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>5582.0</td>\n",
+       "      <td>13416.0</td>\n",
+       "      <td>3483.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -381,22 +318,16 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3.781249</td>\n",
-       "      <td>52.110587</td>\n",
+       "      <td>-0.125019</td>\n",
+       "      <td>17.698904</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>916.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4372.0</td>\n",
-       "      <td>3216.0</td>\n",
-       "      <td>6354.0</td>\n",
-       "      <td>5981.0</td>\n",
-       "      <td>1331.0</td>\n",
+       "      <td>2873.0</td>\n",
+       "      <td>28693.0</td>\n",
+       "      <td>15184.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -405,56 +336,40 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-7.367559</td>\n",
-       "      <td>55.178880</td>\n",
+       "      <td>0.112519</td>\n",
+       "      <td>-12.657038</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3357.0</td>\n",
+       "      <td>6703.0</td>\n",
+       "      <td>8549.0</td>\n",
+       "      <td>12116.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>5100.0</td>\n",
-       "      <td>4246.0</td>\n",
-       "      <td>4285.0</td>\n",
-       "      <td>6961.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3182.0</td>\n",
-       "      <td>3420.0</td>\n",
-       "      <td>5095.0</td>\n",
-       "      <td>3679.0</td>\n",
-       "      <td>3896.0</td>\n",
-       "      <td>10464.0</td>\n",
-       "      <td>4971.0</td>\n",
-       "      <td>2100.0</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   cotAlpha  x-midplane    0    1    2    3       4       5       6       7  \\\n",
-       "0  1.360541   64.129107  0.0  0.0  0.0  0.0     0.0     0.0     0.0     0.0   \n",
-       "1  5.117512   70.606092  0.0  0.0  0.0  0.0     0.0     0.0   693.0  2950.0   \n",
-       "2  1.242920  -51.172048  0.0  0.0  0.0  0.0     0.0     0.0     0.0     0.0   \n",
-       "3  3.781249   52.110587  0.0  0.0  0.0  0.0     0.0     0.0     0.0   916.0   \n",
-       "4 -7.367559   55.178880  0.0  0.0  0.0  0.0  5100.0  4246.0  4285.0  6961.0   \n",
+       "    cotBeta  y-midplane    0    1       2       3        4        5        6  \\\n",
+       "0 -0.115094    9.949084  0.0  0.0     0.0     0.0     37.0   7990.0   8163.0   \n",
+       "1  0.000086    5.112724  0.0  0.0     0.0     7.0   6670.0  14134.0  14591.0   \n",
+       "2 -0.150252   -4.567938  0.0  0.0     0.0  5582.0  13416.0   3483.0      0.0   \n",
+       "3 -0.125019   17.698904  0.0  0.0     0.0     0.0      0.0   2873.0  28693.0   \n",
+       "4  0.112519  -12.657038  0.0  0.0  3357.0  6703.0   8549.0  12116.0      0.0   \n",
        "\n",
-       "   ...      11      12      13      14      15       16      17      18   19  \\\n",
-       "0  ...  4688.0  3583.0   369.0     0.0     0.0      0.0     0.0     0.0  0.0   \n",
-       "1  ...  3194.0  3523.0  2668.0  2051.0  2737.0   2953.0    75.0     0.0  0.0   \n",
-       "2  ...     0.0     0.0     0.0     0.0     0.0      0.0     0.0     0.0  0.0   \n",
-       "3  ...  4372.0  3216.0  6354.0  5981.0  1331.0      0.0     0.0     0.0  0.0   \n",
-       "4  ...  3182.0  3420.0  5095.0  3679.0  3896.0  10464.0  4971.0  2100.0  5.0   \n",
-       "\n",
-       "    20  \n",
-       "0  0.0  \n",
-       "1  0.0  \n",
-       "2  0.0  \n",
-       "3  0.0  \n",
-       "4  0.0  \n",
-       "\n",
-       "[5 rows x 23 columns]"
+       "         7    8    9   10   11   12  \n",
+       "0      0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "1      0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "2      0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "3  15184.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "4      0.0  0.0  0.0  0.0  0.0  0.0  "
       ]
      },
      "execution_count": 4,
@@ -502,8 +417,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df.to_csv('train_1Dx.csv',index=False)\n",
-    "test_df.to_csv('test_1Dx.csv',index=False)"
+    "train_df.to_csv('train_1Dy.csv',index=False)\n",
+    "test_df.to_csv('test_1Dy.csv',index=False)"
    ]
   },
   {
