--- a/hit-position/process-2D.ipynb
+++ b/hit-position/process-2D.ipynb
@@ -32,27 +32,33 @@
     "\n",
     "df = pd.DataFrame()\n",
     "\n",
+    "maxtally = 1000000\n",
+    "\n",
     "print('Processing + charge')\n",
     "for f in os.listdir(eosdir_pos):\n",
     "    if 'recon' in f:\n",
     "        continue\n",
     "        \n",
-    "    label = pd.read_csv(eosdir_pos+f,usecols=['x-midplane','cotAlpha'])\n",
-    "                        \n",
-    "    xdf = pd.read_csv(eosdir_pos+'recon1Dx_'+f.split('_')[1])\n",
+    "    label = pd.read_csv(eosdir_pos+f,usecols=['x-midplane','y-midplane'])               \n",
+    "    recon = pd.read_csv(eosdir_pos+'recon2D_'+f.split('_')[1])\n",
     "    \n",
-    "    df = pd.concat([df,pd.concat([label,xdf],axis=1)])\n",
+    "    df = pd.concat([df,pd.concat([label,recon],axis=1)])\n",
+    "    \n",
+    "    if len(df) > maxtally:\n",
+    "        break\n",
     "    \n",
     "print('Processing - charge')\n",
     "for f in os.listdir(eosdir_neg):\n",
     "    if 'recon' in f:\n",
     "        continue\n",
     "\n",
-    "    label = pd.read_csv(eosdir_neg+f,usecols=['x-midplane','cotAlpha'])\n",
-    "                        \n",
-    "    xdf = pd.read_csv(eosdir_neg+'recon1Dx_'+f.split('_')[1])\n",
+    "    label = pd.read_csv(eosdir_neg+f,usecols=['x-midplane','y-midplane'])               \n",
+    "    recon = pd.read_csv(eosdir_neg+'recon2D_'+f.split('_')[1])\n",
     "    \n",
-    "    df = pd.concat([df,pd.concat([label,xdf],axis=1)])"
+    "    df = pd.concat([df,pd.concat([label,recon],axis=1)])\n",
+    "    \n",
+    "    if len(df) > 2*maxtally:\n",
+    "        break"
    ]
   },
   {
@@ -81,7 +87,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>cotAlpha</th>\n",
+       "      <th>y-midplane</th>\n",
        "      <th>x-midplane</th>\n",
        "      <th>0</th>\n",
        "      <th>1</th>\n",
@@ -92,36 +98,36 @@
        "      <th>6</th>\n",
        "      <th>7</th>\n",
        "      <th>...</th>\n",
-       "      <th>11</th>\n",
-       "      <th>12</th>\n",
-       "      <th>13</th>\n",
-       "      <th>14</th>\n",
-       "      <th>15</th>\n",
-       "      <th>16</th>\n",
-       "      <th>17</th>\n",
-       "      <th>18</th>\n",
-       "      <th>19</th>\n",
-       "      <th>20</th>\n",
+       "      <th>263</th>\n",
+       "      <th>264</th>\n",
+       "      <th>265</th>\n",
+       "      <th>266</th>\n",
+       "      <th>267</th>\n",
+       "      <th>268</th>\n",
+       "      <th>269</th>\n",
+       "      <th>270</th>\n",
+       "      <th>271</th>\n",
+       "      <th>272</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>4.334190</td>\n",
+       "      <td>4.750171</td>\n",
        "      <td>-28.748886</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1307.0</td>\n",
-       "      <td>10724.0</td>\n",
-       "      <td>2613.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>3866.0</td>\n",
-       "      <td>3526.0</td>\n",
-       "      <td>4610.0</td>\n",
-       "      <td>635.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -131,7 +137,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-0.602557</td>\n",
+       "      <td>14.159270</td>\n",
        "      <td>39.535967</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -142,7 +148,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>4843.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -155,7 +161,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.386898</td>\n",
+       "      <td>16.021390</td>\n",
        "      <td>65.387944</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -166,8 +172,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>4699.0</td>\n",
-       "      <td>1192.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -179,20 +185,20 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-3.884130</td>\n",
+       "      <td>3.020286</td>\n",
        "      <td>-62.093969</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2070.0</td>\n",
-       "      <td>3638.0</td>\n",
-       "      <td>2615.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>3666.0</td>\n",
-       "      <td>3053.0</td>\n",
-       "      <td>486.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -203,7 +209,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.099405</td>\n",
+       "      <td>0.116152</td>\n",
        "      <td>-51.763367</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -227,25 +233,25 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
+       "<p>5 rows × 275 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   cotAlpha  x-midplane    0    1    2    3    4       5        6       7  \\\n",
-       "0  4.334190  -28.748886  0.0  0.0  0.0  0.0  0.0  1307.0  10724.0  2613.0   \n",
-       "1 -0.602557   39.535967  0.0  0.0  0.0  0.0  0.0     0.0      0.0     0.0   \n",
-       "2  0.386898   65.387944  0.0  0.0  0.0  0.0  0.0     0.0      0.0     0.0   \n",
-       "3 -3.884130  -62.093969  0.0  0.0  0.0  0.0  0.0  2070.0   3638.0  2615.0   \n",
-       "4  0.099405  -51.763367  0.0  0.0  0.0  0.0  0.0     0.0      0.0     0.0   \n",
+       "   y-midplane  x-midplane    0    1    2    3    4    5    6    7  ...  263  \\\n",
+       "0    4.750171  -28.748886  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  0.0   \n",
+       "1   14.159270   39.535967  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  0.0   \n",
+       "2   16.021390   65.387944  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  0.0   \n",
+       "3    3.020286  -62.093969  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  0.0   \n",
+       "4    0.116152  -51.763367  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  0.0   \n",
        "\n",
-       "   ...      11      12      13     14   15   16   17   18   19   20  \n",
-       "0  ...  3866.0  3526.0  4610.0  635.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-       "1  ...  4843.0     0.0     0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-       "2  ...  4699.0  1192.0     0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-       "3  ...  3666.0  3053.0   486.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-       "4  ...     0.0     0.0     0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "   264  265  266  267  268  269  270  271  272  \n",
+       "0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "1  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "2  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "3  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "4  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
        "\n",
-       "[5 rows x 23 columns]"
+       "[5 rows x 275 columns]"
       ]
      },
      "execution_count": 3,
@@ -283,7 +289,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>cotAlpha</th>\n",
+       "      <th>y-midplane</th>\n",
        "      <th>x-midplane</th>\n",
        "      <th>0</th>\n",
        "      <th>1</th>\n",
@@ -294,23 +300,23 @@
        "      <th>6</th>\n",
        "      <th>7</th>\n",
        "      <th>...</th>\n",
-       "      <th>11</th>\n",
-       "      <th>12</th>\n",
-       "      <th>13</th>\n",
-       "      <th>14</th>\n",
-       "      <th>15</th>\n",
-       "      <th>16</th>\n",
-       "      <th>17</th>\n",
-       "      <th>18</th>\n",
-       "      <th>19</th>\n",
-       "      <th>20</th>\n",
+       "      <th>263</th>\n",
+       "      <th>264</th>\n",
+       "      <th>265</th>\n",
+       "      <th>266</th>\n",
+       "      <th>267</th>\n",
+       "      <th>268</th>\n",
+       "      <th>269</th>\n",
+       "      <th>270</th>\n",
+       "      <th>271</th>\n",
+       "      <th>272</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.360541</td>\n",
-       "      <td>64.129107</td>\n",
+       "      <td>2.431454</td>\n",
+       "      <td>-66.351447</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -320,9 +326,9 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>4688.0</td>\n",
-       "      <td>3583.0</td>\n",
-       "      <td>369.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -333,32 +339,32 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5.117512</td>\n",
-       "      <td>70.606092</td>\n",
+       "      <td>-10.350381</td>\n",
+       "      <td>-35.686443</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>693.0</td>\n",
-       "      <td>2950.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>3194.0</td>\n",
-       "      <td>3523.0</td>\n",
-       "      <td>2668.0</td>\n",
-       "      <td>2051.0</td>\n",
-       "      <td>2737.0</td>\n",
-       "      <td>2953.0</td>\n",
-       "      <td>75.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1.242920</td>\n",
-       "      <td>-51.172048</td>\n",
+       "      <td>-9.170028</td>\n",
+       "      <td>-64.063885</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -381,8 +387,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3.781249</td>\n",
-       "      <td>52.110587</td>\n",
+       "      <td>-10.465312</td>\n",
+       "      <td>31.796910</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -390,13 +396,13 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>916.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>4372.0</td>\n",
-       "      <td>3216.0</td>\n",
-       "      <td>6354.0</td>\n",
-       "      <td>5981.0</td>\n",
-       "      <td>1331.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -405,56 +411,49 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-7.367559</td>\n",
-       "      <td>55.178880</td>\n",
+       "      <td>12.002795</td>\n",
+       "      <td>26.856540</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>5100.0</td>\n",
-       "      <td>4246.0</td>\n",
-       "      <td>4285.0</td>\n",
-       "      <td>6961.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>3182.0</td>\n",
-       "      <td>3420.0</td>\n",
-       "      <td>5095.0</td>\n",
-       "      <td>3679.0</td>\n",
-       "      <td>3896.0</td>\n",
-       "      <td>10464.0</td>\n",
-       "      <td>4971.0</td>\n",
-       "      <td>2100.0</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
+       "<p>5 rows × 275 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   cotAlpha  x-midplane    0    1    2    3       4       5       6       7  \\\n",
-       "0  1.360541   64.129107  0.0  0.0  0.0  0.0     0.0     0.0     0.0     0.0   \n",
-       "1  5.117512   70.606092  0.0  0.0  0.0  0.0     0.0     0.0   693.0  2950.0   \n",
-       "2  1.242920  -51.172048  0.0  0.0  0.0  0.0     0.0     0.0     0.0     0.0   \n",
-       "3  3.781249   52.110587  0.0  0.0  0.0  0.0     0.0     0.0     0.0   916.0   \n",
-       "4 -7.367559   55.178880  0.0  0.0  0.0  0.0  5100.0  4246.0  4285.0  6961.0   \n",
+       "   y-midplane  x-midplane    0    1    2    3    4    5    6    7  ...  263  \\\n",
+       "0    2.431454  -66.351447  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  0.0   \n",
+       "1  -10.350381  -35.686443  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  0.0   \n",
+       "2   -9.170028  -64.063885  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  0.0   \n",
+       "3  -10.465312   31.796910  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  0.0   \n",
+       "4   12.002795   26.856540  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  0.0   \n",
        "\n",
-       "   ...      11      12      13      14      15       16      17      18   19  \\\n",
-       "0  ...  4688.0  3583.0   369.0     0.0     0.0      0.0     0.0     0.0  0.0   \n",
-       "1  ...  3194.0  3523.0  2668.0  2051.0  2737.0   2953.0    75.0     0.0  0.0   \n",
-       "2  ...     0.0     0.0     0.0     0.0     0.0      0.0     0.0     0.0  0.0   \n",
-       "3  ...  4372.0  3216.0  6354.0  5981.0  1331.0      0.0     0.0     0.0  0.0   \n",
-       "4  ...  3182.0  3420.0  5095.0  3679.0  3896.0  10464.0  4971.0  2100.0  5.0   \n",
+       "   264  265  266  267  268  269  270  271  272  \n",
+       "0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "1  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "2  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "3  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "4  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
        "\n",
-       "    20  \n",
-       "0  0.0  \n",
-       "1  0.0  \n",
-       "2  0.0  \n",
-       "3  0.0  \n",
-       "4  0.0  \n",
-       "\n",
-       "[5 rows x 23 columns]"
+       "[5 rows x 275 columns]"
       ]
      },
      "execution_count": 4,
@@ -485,7 +484,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13722961 3430741\n"
+      "1606815 401704\n"
      ]
     }
    ],
@@ -502,8 +501,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df.to_csv('train_1Dx.csv',index=False)\n",
-    "test_df.to_csv('test_1Dx.csv',index=False)"
+    "train_df.to_csv('train_2D.csv',index=False)\n",
+    "test_df.to_csv('test_2D.csv',index=False)"
    ]
   },
   {
@@ -516,7 +515,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -530,7 +529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
